# ketoPhotographyWebsite

./: .dockerignore  .gitattributes  .gitignore  .hintrc  .prettierrc.json  Cargo.toml  Dockerfile  README.md  build.makefile  build.py  build.sh  buildCompilerFile.ts  build_render.rs  cleaner.rs  compile.json  compile.py  compilerSettings.json  compilercleaner.py  data.drawio  deploy.sh  get_components.rs  gitcommit.cr  gitcommit.rs  imageCleaner.ts  imageCollector.ts  img_data.rs  install_dependencies.json  makefile  package-lock.json  package.json  pm2.config.js  push.ls  rebuild.sh  render.py  render.rs  render_file.rs  render_lang.rs  scrambleImages.ts  stack.json  supported_distros.json  (+2 more)
cgi/: auth.ts  img.js  img.ts  index.js  index.ts  select.js  select.ts  serve.js  serve.ts  src.js  src.ts
cgi/constants/: constants.js  constants.ts  ports.json
cgi/extensions/: extension.ts  syntax.js  syntax.ts
cgi/modules/: dynamicLinkGetter.js  dynamicLinkGetter.ts  findPath.js  findPath.ts  getComponentExt.ts  getEmail.ts  getExtSelect.ts  getIcons.ts  getImageData.js  getImageData.ts  getLang.ts  getPages.ts  portServer.js  portServer.ts  replaceData.js  replaceData.ts
cgi/src/: select.js  serve.ts
cgi/types/: types.js  (+1 more)
cgi2/: img.ts  index.ts  select.ts  serve.ts  server.ts  src.ts
documentation/: build.drawio
img/: build.ls  categories.json  customers.json  info.json  sessions.json  stills.json  update-stills.ls
public/: api.ts  app.css  app.js  app.ts  app_old.ts  events.ts  extension.ts  index.html  index.marko
types/: classes.ts  types.js  types.ts
(+41 files in other folders)
