[package]
name = "ketoWebsite"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"

[[bin]]
name = "build_render"
path = "build_render.rs"

[[bin]]
name = "render_lang"
path = "render_lang.rs"

[[bin]]
name = "render_file"
path = "render_file.rs"

[[bin]]
name = "img_data"
path = "img_data.rs"

[[bin]]
name = "gitcommit"
path = "gitcommit.rs"

[[bin]]
name = "render"
path = "render.rs"

[[bin]]
name = "cleaner"
path = "cleaner.rs"

[[bin]]
name = "get_components"
path = "get_components.rs"